# fortran-load

./: CMakeLists.txt  README.md  makefile
app/: CMakeLists.txt  cli_mo.f90  main.f90  makefile
app/bak/: main_2024-11-02_1711.f90  main_2024-11-02_1712.f90  main_2024-11-02_1714.f90
data/: year=2005.csv  year=2006.csv  year=2007.csv  year=2008.csv  year=2009.csv  year=2010.csv  year=2011.csv  year=2012.csv  year=2013.csv  year=2014.csv  year=2015.csv  year=2016.csv  year=2017.csv  year=2018.csv  year=2019.csv  year=2020.csv  year=2021.csv  year=2022.csv  year=2023.csv  year=2024.csv
include/: macro.fi
install/: fortran-load.service  fortran-load.timer  makefile
src/: change_unit_mw2mankw.R  load_mo.f90  makefile  plot_loads.R
test/: CMakeLists.txt
